# job_hunt_assistant

./: .gitignore  README.md  pyproject.toml
src/job_hunt_assistant/: crew.py  main.py  usajobs_api.py
src/job_hunt_assistant/config/: agents.yaml  tasks.yaml
src/job_hunt_assistant/data/: sample_resume.txt
src/job_hunt_assistant/utils/: config.py
