[project]
name = "job_hunt_assistant"
version = "0.1.0"
description = "job_hunt_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
job_hunt_assistant = "job_hunt_assistant.main:run"
run_crew = "job_hunt_assistant.main:run"
train = "job_hunt_assistant.main:train"
replay = "job_hunt_assistant.main:replay"
test = "job_hunt_assistant.main:test"
run_with_trigger = "job_hunt_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
